[tool.poetry]
name = "purple-air-scraper"
version = "0.1.0"
description = "PurpleAir Scraper"
authors = ["Nick Pegg <nick@nickpegg.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.9.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mypy = "^0.800"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
