[tool.poetry]
name = "purple-air-scraper"
version = "0.1.0"
description = "PurpleAir Scraper"
authors = ["Nick Pegg <nick@nickpegg.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0"
black = "^22.6.0"
types-requests = "^2.28.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
